automatic commit at releng box